After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 646714 - gnome-rr crashes gnome-settings-daemon
gnome-rr crashes gnome-settings-daemon
Status: RESOLVED FIXED
Product: gnome-desktop
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: Desktop Maintainers
Desktop Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-04-04 14:38 UTC by Alexander Larsson
Modified: 2011-04-04 15:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix the crash (963 bytes, patch)
2011-04-04 14:38 UTC, Alexander Larsson
none Details | Review

Description Alexander Larsson 2011-04-04 14:38:52 UTC
Created attachment 185111 [details] [review]
Fix the crash

When the spice client goes to fullscreen it (temporarily) turns all xrandr outputs off (for some reason). This causes gnome-settings-daemon to crash (and respawn and reset the old screen size) due to a NULL deref in libgnome-desktop.

Attaching a patch.