Avoid a possible crash

When the spice client goes to fullscreen it (temporarily) turns all xrandr
outputs off (for some reason). This causes gnome-settings-daemon to crash (and
respawn and reset the old screen size) due to a NULL deref in libgnome-desktop.

Patch by Alex Larsson
https://bugzilla.gnome.org/show_bug.cgi?id=646714