libmate-desktop/mate-rr-config.c
@@ -1233,7 +1233,8 @@ mate_rr_config_ensure_primary (MateRRConfig *configuration)
         if (!found) {
                 if (laptop != NULL) {
                         laptop->priv->primary = TRUE;
-                } else {
+                } else if (top_left != NULL) {
+		        /* Note: top_left can be NULL if all outputs are off */
                         top_left->priv->primary = TRUE;
                 }
         }
